# hse_ai_solution

./: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
dev/: docker-compose.yaml  env.example
docs/: PROPOSAL.md
src/application/commands/: auth.py  base.py  files.py  incidents.py
src/application/dto/: search_results.py
src/application/events/: base.py
src/application/exceptions/: acts.py  auth.py  base.py  files.py  incidents.py  llm.py  mediator.py
src/application/filters/: common.py  enquiry_acts.py  incidents.py
src/application/interfaces/: auth.py  embeddings.py  llm_extraction.py  llm_report.py  ocr.py  parsers.py  storage.py
src/application/mediator/: base.py  command.py  event.py  query.py
src/application/queries/: enquiry_acts.py  incidents.py  reports.py
src/application/services/: act_matching.py  npa_search.py  report_npa_search.py
src/domain/entities/: base.py  files.py  incidents.py  laws.py  npa.py  users.py  vnd.py
src/domain/enums/: base.py  incidents.py  npa.py
src/domain/events/: base.py  incidents.py
src/infrastructure/di/: containers.py
src/settings/: config.py
static/: index.html
tests/: conftest.py
tests/integration/: __init__.py  test_incidents_api.py
tests/manual/: test_act_ingestion.py
tests/unit/: __init__.py  test_act_matching.py  test_create_incident_command.py  test_enquiry_act_entity.py  test_enquiry_act_filters.py  test_extraction_schema.py  test_incident_entity.py  test_ocr_fallback.py  test_report_query_handler.py  test_report_schema.py  test_upload_enquiry_act_command.py  test_upload_file_command.py  test_uploaded_file_entity.py
(+65 files in other folders)
