[project]
name = "tb-expert-api"
version = "0.1.0"
description = "Backend for workplace safety management (Эксперт по ТБ)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiojobs==1.4.0",
    "alembic==1.18.1",
    "asyncpg==0.31.0",
    "beautifulsoup4==4.12.3",
    "fastapi==0.128.0",
    "httpx==0.28.1",
    "orjson==3.11.5",
    "pgvector==0.3.6",
    "punq==0.7.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "sqlalchemy==2.0.46",
    "uvicorn==0.40.0",
    # SAP Excel import
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    # PDF processing
    "pymupdf==1.25.0",
    # Word document generation
    "python-docx==1.1.2",
    # LLM-based OCR (Qwen Vision)
    "openai>=1.100.0,<2.0.0",
    # S3 / MinIO (async)
    "aiobotocore==2.21.1",
    # File uploads
    "python-multipart==0.0.18",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "asyncio: mark test as async",
    "unit: mark test as unit test",
    "integration: mark test as integration test",
]
